nuget/Microsoft.WSL.Containers/build/net/Microsoft.WSL.Containers.Interop.cs

// Copyright (c) Microsoft. All rights reserved.
//
// C# P/Invoke interop for the WSL Container SDK (wslcsdk.dll).
//
// This file is a direct mapping of wslcsdk.h. All structures, enums, delegates,
// and entry points are exposed for use by managed callers.
//
// Notes:
//   - Opaque settings structs (WslcSessionSettings, WslcContainerSettings,
//     WslcProcessSettings) must only be manipulated through the SDK functions.
//   - Handle types (WslcSession, WslcContainer, WslcProcess) are IntPtr values
//     that must be released with the corresponding WslcRelease* function.
//   - Output strings allocated by the SDK (errorMessage, inspectData) are
//     CoTaskMem-allocated; free them with Marshal.FreeCoTaskMem after use.
//   - Delegate instances passed as callbacks must be kept alive (prevent GC)
//     for the entire duration they may be invoked by native code.

using System;
using System.Runtime.InteropServices;

namespace Microsoft.WSL.Containers.Interop
{
    [StructLayout(LayoutKind.Sequential, Size = 80, Pack = 8)]
    public struct WslcSessionSettings
    {
        // Opaque internal data - do not access directly.
    }

    [StructLayout(LayoutKind.Sequential, Size = 96, Pack = 8)]
    public struct WslcContainerSettings
    {
        // Opaque internal data - do not access directly.
    }


    [StructLayout(LayoutKind.Sequential, Size = 72, Pack = 8)]
    public struct WslcProcessSettings
    {
        // Opaque internal data - do not access directly.
    }

    public enum WslcContainerNetworkingMode : int
    {
        None = 0,
        Bridged = 1
    }

    public enum WslcVhdType : int
    {
        Dynamic = 0,
        Fixed = 1
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct WslcVhdRequirements
    {
        // Ignored by WslcSetSessionSettingsVhd
        [MarshalAs(UnmanagedType.LPStr)]
        public string Name;

        public ulong SizeInBytes;
        public WslcVhdType Type;
    }

    [Flags]
    public enum WslcSessionFeatureFlags : int
    {
        None = 0x00000000,
        EnableGpu = 0x00000004
    }

    public enum WslcSessionTerminationReason : int
    {
        Unknown = 0,
        Shutdown = 1,
        Crashed = 2
    }

    [UnmanagedFunctionPointer(CallingConvention.StdCall)]
    public delegate void WslcSessionTerminationCallback(
        WslcSessionTerminationReason reason,
        IntPtr context);

    public enum WslcPortProtocol : int
    {
        Tcp = 0,
        Udp = 1
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct WslcContainerPortMapping
    {
        public ushort WindowsPort;
        public ushort ContainerPort;
        public WslcPortProtocol Protocol;
        /// <summary>
        /// Optional pointer to a SockAddrStorage containing an IPv4 or IPv6 binding address.
        /// Set to IntPtr.Zero to use the default (127.0.0.1).
        /// </summary>
        public IntPtr WindowsAddress;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct WslcContainerVolume
    {
        [MarshalAs(UnmanagedType.LPWStr)]
        public string WindowsPath;

        [MarshalAs(UnmanagedType.LPStr)]
        public string ContainerPath;

        [MarshalAs(UnmanagedType.Bool)]
        public bool ReadOnly;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct WslcContainerNamedVolume
    {
        [MarshalAs(UnmanagedType.LPStr)]
        public string Name;

        [MarshalAs(UnmanagedType.LPStr)]
        public string ContainerPath;

        [MarshalAs(UnmanagedType.Bool)]
        public bool ReadOnly;
    }

    [Flags]
    public enum WslcContainerFlags : int
    {
        None = 0x00000000,
        AutoRemove = 0x00000001,
        EnableGpu = 0x00000002,
        Privileged = 0x00000004
    }

    [Flags]
    public enum WslcContainerStartFlags : int
    {
        None = 0x00000000,
        Attach = 0x00000001
    }

    public enum WslcContainerState : int
    {
        Invalid = 0,
        Created = 1,
        Running = 2,
        Exited = 3,
        Deleted = 4
    }

    public enum WslcSignal : int
    {
        None = 0,
        SigHup = 1,
        SigInt = 2,
        SigQuit = 3,
        SigKill = 9,
        SigTerm = 15
    }

    [Flags]
    public enum WslcDeleteContainerFlags : int
    {
        None = 0x00000000,
        Force = 0x00000001
    }

    public enum WslcProcessIOHandle : int
    {
        StdIn = 0,
        StdOut = 1,
        StdErr = 2
    }

    [UnmanagedFunctionPointer(CallingConvention.StdCall)]
    public delegate void WslcStdIOCallback(
        WslcProcessIOHandle ioHandle,
        IntPtr data,
        uint dataSize,
        IntPtr context);

    [UnmanagedFunctionPointer(CallingConvention.StdCall)]
    public delegate void WslcProcessExitCallback(
        int exitCode,
        IntPtr context);

    [StructLayout(LayoutKind.Sequential)]
    public struct WslcProcessCallbacks
    {
        public WslcStdIOCallback OnStdOut;
        public WslcStdIOCallback OnStdErr;
        public WslcProcessExitCallback OnExit;
    }

    public enum WslcProcessState : int
    {
        Unknown = 0,
        Running = 1,
        Exited = 2,
        Signalled = 3
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct WslcImageProgressDetail
    {
        public ulong Current;
        public ulong Total;
    }

    public enum WslcImageProgressStatus : int
    {
        Unknown = 0,
        Pulling = 1,
        Waiting = 2,
        Downloading = 3,
        Verifying = 4,
        Extracting = 5,
        Complete = 6
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct WslcImageProgressMessage
    {
        public IntPtr Id; // PCSTR - use Marshal.PtrToStringAnsi

        public WslcImageProgressStatus Status;

        public WslcImageProgressDetail Detail;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct WslcRegistryAuthenticationInformation
    {
        // TBD
    }

    [UnmanagedFunctionPointer(CallingConvention.StdCall)]
    public delegate int WslcContainerImageProgressCallback(
        ref WslcImageProgressMessage progress,
        IntPtr context);

    [StructLayout(LayoutKind.Sequential)]
    public struct WslcPullImageOptions
    {
        [MarshalAs(UnmanagedType.LPStr)]
        public string Uri;

        public WslcContainerImageProgressCallback ProgressCallback;
        public IntPtr ProgressCallbackContext;
        public IntPtr AuthInfo; // pointer to WslcRegistryAuthenticationInformation, or IntPtr.Zero
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct WslcImportImageOptions
    {
        public WslcContainerImageProgressCallback ProgressCallback;
        public IntPtr ProgressCallbackContext;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct WslcLoadImageOptions
    {
        public WslcContainerImageProgressCallback ProgressCallback;
        public IntPtr ProgressCallbackContext;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi)]
    public struct WslcImageInfo
    {
        public const int ImageNameLength = 256;

        [MarshalAs(UnmanagedType.ByValTStr, SizeConst = ImageNameLength)]
        public string Name;

        [MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
        public byte[] Sha256;

        public ulong SizeBytes;
        public ulong CreatedTimestamp;
    }

    [Flags]
    public enum WslcComponentFlags : int
    {
        None = 0,
        VirtualMachinePlatform = 1,
        WslPackage = 2
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct WslcVersion
    {
        public uint Major;
        public uint Minor;
        public uint Revision;
    }

    [UnmanagedFunctionPointer(CallingConvention.StdCall)]
    public delegate void WslcInstallCallback(
        WslcComponentFlags component,
        uint progress,
        uint total,
        IntPtr context);

    // ========================================================================
    // Socket address helpers (for WslcContainerPortMapping)
    // ========================================================================

    /// <summary>
    /// Mirrors the native SOCKADDR_STORAGE structure (128 bytes).
    /// Use <see cref="SockAddrHelpers"/> to create instances for IPv4/IPv6.
    /// </summary>
    [StructLayout(LayoutKind.Sequential, Size = 128)]
    public struct SockAddrStorage
    {
        public short Family; // AF_INET (2) or AF_INET6 (23)
    }

    [StructLayout(LayoutKind.Sequential, Size = 16)]
    public struct SockAddrIn
    {
        public short Family;    // AF_INET = 2
        public ushort Port;     // network byte order
        public uint Address;    // IPv4 address in network byte order

        [MarshalAs(UnmanagedType.ByValArray, SizeConst = 8)]
        public byte[] Zero;
    }

    [StructLayout(LayoutKind.Sequential, Size = 28)]
    public struct SockAddrIn6
    {
        public short Family;    // AF_INET6 = 23
        public ushort Port;     // network byte order
        public uint FlowInfo;

        [MarshalAs(UnmanagedType.ByValArray, SizeConst = 16)]
        public byte[] Address;  // 128-bit IPv6 address

        public uint ScopeId;
    }

    /// <summary>
    /// Helpers to create native socket address structures for use with port mappings.
    /// </summary>
    public static class SockAddrHelpers
    {
        public const short AF_INET = 2;
        public const short AF_INET6 = 23;

        /// <summary>
        /// Creates a SockAddrStorage from a .NET IPAddress and pins it, returning
        /// a GCHandle the caller must free and a pointer suitable for
        /// WslcContainerPortMapping.WindowsAddress.
        /// </summary>
        public static GCHandle CreatePinned(System.Net.IPAddress address, out IntPtr pointer)
        {
            if (address == null)
                throw new ArgumentNullException(nameof(address));

            byte[] raw;

            if (address.AddressFamily == System.Net.Sockets.AddressFamily.InterNetwork)
            {
                raw = new byte[128];
                raw[0] = (byte)(AF_INET & 0xFF);
                raw[1] = (byte)((AF_INET >> 8) & 0xFF);
                byte[] addrBytes = address.GetAddressBytes(); // 4 bytes
                Buffer.BlockCopy(addrBytes, 0, raw, 4, 4);
            }
            else if (address.AddressFamily == System.Net.Sockets.AddressFamily.InterNetworkV6)
            {
                raw = new byte[128];
                raw[0] = (byte)(AF_INET6 & 0xFF);
                raw[1] = (byte)((AF_INET6 >> 8) & 0xFF);
                byte[] addrBytes = address.GetAddressBytes(); // 16 bytes
                Buffer.BlockCopy(addrBytes, 0, raw, 8, 16);
                long scopeId = address.ScopeId;
                raw[24] = (byte)(scopeId & 0xFF);
                raw[25] = (byte)((scopeId >> 8) & 0xFF);
                raw[26] = (byte)((scopeId >> 16) & 0xFF);
                raw[27] = (byte)((scopeId >> 24) & 0xFF);
            }
            else
            {
                throw new ArgumentException("Only IPv4 and IPv6 addresses are supported.", nameof(address));
            }

            var handle = GCHandle.Alloc(raw, GCHandleType.Pinned);
            pointer = handle.AddrOfPinnedObject();
            return handle;
        }
    }

    // ========================================================================
    // Native methods (P/Invoke)
    // ========================================================================

    public static class WslcNativeMethods
    {
        private const string DllName = "wslcsdk.dll";
        public const int ContainerIdBufferSize = 65;

        // ----------------------------------------------------------------
        // Session
        // ----------------------------------------------------------------
